compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__explicit_return_type.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() -> Int {\n    123\n}"
---
package mod

func a() int {
  return 123
}
