compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__explicit_return_type_with_panic.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() -> Int {\n    panic\n}"
---
package mod

func a() int {
  panic("panic expression evaluated")
}
