compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__most_basic.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() {\n    123\n}"
---
package mod

func a() int {
  return 123
}
