compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__most_basic_bool.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() {\n    True\n}"
---
package mod

func a() bool {
  return true
}
