compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__most_basic_string.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() {\n    \"heya\"\n}"
---
package mod

func a() string {
  return "heya"
}
