compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__simple_tuple_return.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\nfn a() {\n    #(\"heya\", 111)\n}"
---
package mod

func a() (string, int) {
  return "heya", 111
}
